--- a/NuageAlarms/app/src/main/res/values/strings.xml
+++ b/NuageAlarms/app/src/main/res/values/strings.xml
@@ -31,6 +31,7 @@
         <item>MINOR</item>
         <item>WARNING</item>
         <item>INFO</item>
+        <item>ALL</item>
     </string-array>
 
     <string name="existing_alarms">Existing Alarms:</string>
@@ -46,6 +47,8 @@
     <string name="nav_account">Account</string>
     <string name="nav_settings">Settings</string>
     <string name="nav_description">Description</string>
+
+    <string name="header_settings">Settings:</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
