--- a/NuageAlarms/app/src/main/res/values/strings.xml
+++ b/NuageAlarms/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="nuage_vports">VPorts</string>
 
     <string name="filters">Filters</string>
+    <string name="labels">Labels</string>
     <string name="severity">Severity:</string>
     <string-array name="severity_items">
         <item>CRITICAL</item>
@@ -49,6 +50,23 @@
     <string name="nav_description">Description</string>
 
     <string name="header_settings">Settings:</string>
+    <string name="settings_account">Account:</string>
+    <string name="settings_server">Server:</string>
+    <string name="button_save">Save</string>
+
+    <string name="header_description">Description:</string>
+    <string name="app_description_title">App Description:</string>
+    <string name="app_description">
+        This Application was developed by Marco Martins in collaboration with ISEL and Nokia. This app\'s function is
+        supposed to alert and allow visualizatio of current existing alarms all over Nuage's Network.
+    </string>
+    <string name="company_description_title">Company Description:</string>
+    <string name="company_description">
+        Nuage Networks from Nokia brings a combination of groundbreaking technologies and networking expertise to the
+        enterprise and telecommunications industries. We have applied new thinking to delivering massively scalable and
+        highly programmable SDN solutions from the data center to the WAN with the security and availability required by
+        business-critical environments.
+    </string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
