Started Notifications Phase using RabbitMQ.

--- a/NuageAlarms/app/src/main/res/values/strings.xml
+++ b/NuageAlarms/app/src/main/res/values/strings.xml
@@ -58,7 +58,7 @@
     <string name="app_description_title">App Description:</string>
     <string name="app_description">
         This Application was developed by Marco Martins in collaboration with ISEL and Nokia. This app\'s function is
-        supposed to alert and allow visualizatio of current existing alarms all over Nuage's Network.
+        supposed to alert and allow visualizatio of current existing alarms all over Nuage\'s Network.
     </string>
     <string name="company_description_title">Company Description:</string>
     <string name="company_description">
