Cleaned code and finished the alarm notifications feature.

--- a/NuageAlarms/app/src/main/res/values/strings.xml
+++ b/NuageAlarms/app/src/main/res/values/strings.xml
@@ -54,7 +54,9 @@
     <string name="settings_account">Account:</string>
     <string name="settings_server">Server:</string>
     <string name="button_save">Save</string>
+    <string name="button_refresh">Refresh</string>
     <string name="activate_notifications">Activate Notifications</string>
+    <string name="notification_alarms">Notification Alarms:</string>
 
     <string name="header_description">Description:</string>
     <string name="app_description_title">App Description:</string>
